k8s/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: cloudnative-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cloudnative-vs
spec:
  hosts:
  - "*"
  gateways:
  - cloudnative-gateway
  http:

  - match:
    - uri:
        prefix: /api/users
    rewrite:
      uri: /users
    route:
    - destination:
        host: user-service
        port:
          number: 8000

  - match:
    - uri:
        prefix: /api/user
    rewrite:
      uri: /user
    route:
    - destination:
        host: user-service
        port:
          number: 8000

  - match:
    - uri:
        regex: /api/user/(\d+)
    rewrite:
      uri: /user/{match[1]}
    route:
    - destination:
        host: user-service
        port:
          number: 8000

  - match:
    - uri:
        prefix: /api/products
    rewrite:
      uri: /products
    route:
    - destination:
        host: product-service
        port:
          number: 8001

  - match:
    - uri:
        prefix: /api/product
    rewrite:
      uri: /product
    route:
    - destination:
        host: product-service
        port:
          number: 8001

  - match:
    - uri:
        regex: /api/product/(\d+)
    rewrite:
      uri: /product/{match[1]}
    route:
    - destination:
        host: product-service
        port:
          number: 8001

  - match:
    - uri:
        prefix: /api/orders
    rewrite:
      uri: /orders
    route:
    - destination:
        host: order-service
        port:
          number: 8002

  - match:
    - uri:
        prefix: /api/order
    rewrite:
      uri: /order
    route:
    - destination:
        host: order-service
        port:
          number: 8002

  - match:
    - uri:
        regex: /api/order/(\d+)
    rewrite:
      uri: /order/{match[1]}
    route:
    - destination:
        host: order-service
        port:
          number: 8002

  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend-service
        port:
          number: 80
